fix cart controller documentation(can input json)
