# docs/swagger.json
@@ -48,7 +48,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Cart"
+                            "$ref": "#/definitions/controllers.CartInput"
                         }
                     }
                 ],
@@ -63,7 +63,7 @@
             }
         },
         "/cart/{cartId}": {
-            "post": {
+            "put": {
                 "description": "update cart belongs to the user who is currently logged in.",
                 "produces": [
                     "application/json"
@@ -74,12 +74,19 @@
                 "summary": "update cart.",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "cartId",
+                        "name": "cartId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "cart's data",
                         "name": "Body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Cart"
+                            "$ref": "#/definitions/controllers.CartUpdateInput"
                         }
                     }
                 ],
@@ -732,6 +739,25 @@
         }
     },
     "definitions": {
+        "controllers.CartInput": {
+            "type": "object",
+            "properties": {
+                "ProductId": {
+                    "type": "integer"
+                },
+                "qty": {
+                    "type": "integer"
+                }
+            }
+        },
+        "controllers.CartUpdateInput": {
+            "type": "object",
+            "properties": {
+                "qty": {
+                    "type": "integer"
+                }
+            }
+        },
         "controllers.FeedbackInput": {
             "type": "object",
             "properties": {
